Added configs on main

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/dpdk"]
 	path = deps/dpdk
 	url = https://github.com/DPDK/dpdk.git
+[submodule "deps/openssl"]
+	path = deps/openssl
+	url = https://github.com/openssl/openssl.git
