--- a/make/photon/egress/Dockerfile.base
+++ b/make/photon/egress/Dockerfile.base
@@ -1,44 +1,32 @@
-FROM photon:5.0
+# Dockerfile.base
+# Base image for DPDK-POT runtime environment on Photon OS
 
-# Install required packages for DPDK runtime
+# Use Photon OS 4.0 as the base
+FROM photon:4.0
+
+ARG APP_USER=dpdk
+ARG APP_GROUP=dpdk
+
+# Install essential DPDK *runtime* dependencies ONLY.
+# - numactl-libs: For NUMA awareness (libnuma.so.1)
+# - libpcap: Might be needed for certain PMDs or utilities (libpcap.so.0.8) - Optional if not used.
+# - libatomic1: Often required for atomic operations used by DPDK (libatomic.so.1)
+# - shadow: Provides useradd/groupadd utilities needed below.
+# REMOVED: build tools (meson, gcc, etc.), -dev packages, python, git.
+# ADD other runtime libs if your application specifically requires them (e.g., openssl-libs for cryptodev).
 RUN tdnf install -y \
-    build-essential \
-    meson \
-    ninja-build \
-    python3 \
-    pkg-config \
-    git \
-    libpcap-dev \
-    libnuma-dev \
+    numactl-libs \
+    libpcap \
     libatomic1 \
     shadow \
-    sudo \
     && tdnf clean all
 
-# Create DPDK user/group
-RUN groupadd -r dpdk && useradd -r -g dpdk dpdk
+# Create a non-root user and group for running the application securely.
+# Using --no-log-init helps in container environments.
+RUN groupadd -r ${APP_GROUP} && useradd --no-log-init -r -g ${APP_GROUP} ${APP_USER}
 
-# Create necessary directories
-RUN mkdir -p /etc/dpdk-pot/config \
-    /opt/dpdk-pot/scripts \
-    /var/log/dpdk-pot \
-    /dev/hugepages
+# --- NO HUGEPAGE CONFIGURATION HERE ---
+# Hugepages MUST be configured on the HOST system before starting containers.
 
-# Set permissions
-RUN chown -R dpdk:dpdk /etc/dpdk-pot \
-    /opt/dpdk-pot \
-    /var/log/dpdk-pot \
-    /dev/hugepages
-
-# Set up DPDK environment variables
-ENV RTE_SDK=/usr/local/share/dpdk \
-    RTE_TARGET=x86_64-native-linuxapp-gcc \
-    DPDK_DIR=/usr/local \
-    DPDK_BUILD=/usr/local
-
-# Configure huge pages
-RUN echo 1024 > /sys/kernel/mm/hugepages/hugepages-2048kB/nr_hugepages && \
-    mkdir -p /mnt/huge && \
-    mount -t hugetlbfs nodev /mnt/huge
-
-WORKDIR /opt/dpdk-pot
+# You can optionally set the default user here, or in the final app Dockerfile
+# USER ${APP_USER}
