--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild",
     "files.associations": {
         "*.c": "c",
-        "common.h": "c"
+        "common.h": "c",
+        "port.h": "c"
     }
 }
