--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,7 @@
         "ingress.h": "c",
         "processing.h": "c",
         "egress.h": "c",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "init.h": "c"
     }
 }
