--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
         "processing.h": "c",
         "egress.h": "c",
         "stdint.h": "c",
-        "init.h": "c"
+        "init.h": "c",
+        "nodemng.h": "c"
     }
 }
