Update on docker settings

--- a/.dockerignore
+++ b/.dockerignore
@@ -10,7 +10,8 @@ deps/dpdk/build
 deps/openssl/build
 
 # Build artifacts (local)
-build/**
+# Commenting out build/** to allow copying the binary
+# build/**
 builddir/
 
 # OS / IDE specific
