Update for ingress and transit

--- a/Dockerfile.iperf
+++ b/Dockerfile.iperf
@@ -2,6 +2,7 @@ FROM ubuntu:24.04
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     iperf3 \
+    iperf \
     iputils-ping \
     iproute2 \
     && rm -rf /var/lib/apt/lists/*
